# AURA-PROJ

./: .gitignore  .gitlab-ci.yml  AGENTS.md  AI_ENABLEMENT_PLAN.md  CLAUDE.md  DELIVERABLE_SUMMARY.txt  Final-Module-2-KG.md  GEMINI.md  IMPLEMENTATION_ROADMAP.md  IMPROVEMENTS.md  Jenkinsfile  Module-2-KG.md  OR_bug.md  README.md  algorithms.ts  commit-tasks.bat  debug_api.py  debug_celery.py  deployment-notes.md  dump.rdb  kg_pipeline_comparison.md  models.json  package-lock.json  package.json  phase1-fix-summary.md  phase2-implementation-notes.md  pyrightconfig.json  requirements.txt  research.md  results.json  run-all.bat  run_all.bat  run_commands.ps1  run_test.bat  setup.bat  temp_api_models.txt  temp_check.py  temp_check_api.py  temp_check_default.py  temp_check_key.py  (+21 more)
shared/model_router/: README.md  pyproject.toml  pyrightconfig.json
shared/model_router/src/model_router/: __init__.py  cache.py  compat.py  config.py  cost_calculator.py  errors.py  key_manager.py  router.py  settings_store.py  types.py  usage_tracker.py
shared/model_router/src/model_router/providers/: __init__.py  base.py  general_compute.py  openrouter.py  (+1 more)
shared/model_router/tests/: __init__.py  conftest.py  test_compat.py  test_cost_calculator.py  test_errors.py  test_general_compute_provider.py  test_import_contexts.py  test_integration_flows.py  test_key_manager.py  test_model_cache.py  test_multi_model_config.py  test_openrouter_provider.py  test_router.py  test_settings_store.py  test_streaming.py  test_thinking.py  test_types.py  test_usage_tracker.py  test_vertex_ai_provider.py
(+494 files in other folders)
