[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'aura-model-router'
version = '0.1.0'
description = 'Shared provider-agnostic model router for AURA apps'
readme = 'README.md'
requires-python = '>=3.10'
dependencies = [
  'pydantic>=2.0',
]

[project.optional-dependencies]
vertex = [
  'google-genai>=1.59.0',
  'google-auth>=2.35.0',
  'google-cloud-aiplatform>=1.51.0',
  'requests>=2.31.0',
]
openrouter = [
  'openai>=1.51.0',
]
dev = [
  'pytest>=8.0',
  'pytest-asyncio>=0.23',
]
all = [
  'google-genai>=1.59.0',
  'google-auth>=2.35.0',
  'google-cloud-aiplatform>=1.51.0',
  'requests>=2.31.0',
  'openai>=1.51.0',
]

[tool.hatch.build.targets.wheel]
packages = ['src/model_router']

[tool.pytest.ini_options]
asyncio_mode = 'auto'
testpaths = ['tests']
